--- a/templates/main/contact.html.twig
+++ b/templates/main/contact.html.twig
@@ -23,7 +23,7 @@
 			{{ form_label(contactForm, 'Sujet :', { 'label_attr': { 'class': 'form__label form__contact-subject-label' }}) }}
 			{{ form_widget(contactForm.subject) }}
 			<p class="error-message error-message_color_red error-message-contact-subject-not-checked display-none">
-				Merci de sélectionnner une valeur.
+				Merci de sélectionner une valeur.
 			</p>
 			{{ form_errors(contactForm.subject) }}
 		</div>
@@ -31,7 +31,7 @@
 		<div class="form-field">
 			{{ form_widget(contactForm.civilityTitle) }}
 			<p class="error-message error-message_color_red error-message-user-gender-not-checked display-none">
-				Merci de sélectionnner une valeur.
+				Merci de sélectionner une valeur.
 			</p>
 			{{ form_errors(contactForm.civilityTitle) }}
 		</div>
