--- a/templates/address/list.html.twig
+++ b/templates/address/list.html.twig
@@ -12,22 +12,22 @@
 {% block body %}
 	<section class="page">
 		<h2>Mes Adresses</h2>
-		{# START: searchAddressForm #}
-		{{ form_start(searchAddressForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'address-search-form' }}
+		{# START: addressSearchForm #}
+		{{ form_start(addressSearchForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'address-search-form' }}
 		) }}
 		<div class="form-field">
-			{{ form_label(searchAddressForm, 'Ville', { 'label_attr': { 'class': 'form-field__label form-field__address-city-label display-none' }}) }}
-			{{ form_widget(searchAddressForm.city, { 'id': 'address-city-input', 'attr': {'class': 'form-field__input form-field__address-city-input form-field__input_color_black', 'placeholder': '🔍 Rechercher par ville' }}) }}
+			{{ form_label(addressSearchForm, 'Ville', { 'label_attr': { 'class': 'form-field__label form-field__address-city-label display-none' }}) }}
+			{{ form_widget(addressSearchForm.city, { 'id': 'address-city-input', 'attr': {'class': 'form-field__input form-field__address-city-input form-field__input_color_black', 'placeholder': '🔍 Rechercher par ville' }}) }}
 			<p class="error-message error-message_color_red error-message-address-city-empty display-none">
 				Merci de saisir un nom de ville.
 			</p>
-			{{ form_errors(searchAddressForm.city) }}
+			{{ form_errors(addressSearchForm.city) }}
 		</div>
 		<button type="submit" class="page__button page__submit-button page__search-button page__button_background-color_blue page__button_color_white" id="address-search-button">
 			Rechercher
 		</button>
-		{{ form_end(searchAddressForm) }}
-		{# END: searchAddressForm #}
+		{{ form_end(addressSearchForm) }}
+		{# END: addressSearchForm #}
 		<a class="page__link page__create-link page__link_background-color_dodger-blue page__link_color_white" href="{{ path('address_create') }}" id="create-address-link">Créer</a>
 		<div
 			class="neptune">
