--- a/templates/admin/address/create.html.twig
+++ b/templates/admin/address/create.html.twig
@@ -14,86 +14,86 @@
 		<h2>Créer une Adresse :
 			{{ user.firstName }}
 			{{ user.lastName }}</h2>
-		{# START: adminCreateAddressForm #}
-		{{ form_start(adminCreateAddressForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-address-create-form' }}) }}
+		{# START: adminAddressCreateForm #}
+		{{ form_start(adminAddressCreateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-address-create-form' }}) }}
 		{# firstName #}
 		<div class="form-field">
-			{{ form_label(adminCreateAddressForm, 'Prénom', { 'label_attr': { 'class': 'form-field__label form-field__address-first-name-label display-none' }}) }}
-			{{ form_widget(adminCreateAddressForm.firstName, { 'id': 'address-first-name-input', 'attr': {'class': 'form-field__input form-field__user-first-name-input form-field__input_color_black', 'placeholder': 'Prénom' }}) }}
+			{{ form_label(adminAddressCreateForm, 'Prénom', { 'label_attr': { 'class': 'form-field__label form-field__address-first-name-label display-none' }}) }}
+			{{ form_widget(adminAddressCreateForm.firstName, { 'id': 'address-first-name-input', 'attr': {'class': 'form-field__input form-field__user-first-name-input form-field__input_color_black', 'placeholder': 'Prénom' }}) }}
 			<p class="error-message error-message_color_red error-message-user-first-name-empty display-none">
 				Merci de saisir un prénom.
 			</p>
-			{{ form_errors(adminCreateAddressForm.firstName) }}
+			{{ form_errors(adminAddressCreateForm.firstName) }}
 		</div>
 		{# lastName #}
 		<div class="form-field">
-			{{ form_label(adminCreateAddressForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__address-last-name-label display-none' }}) }}
-			{{ form_widget(adminCreateAddressForm.lastName, { 'id': 'address-last-name-input', 'attr': { 'class': 'form-field__input form-field__user-last-name-input form-field__input_color_black', 'placeholder': 'Nom' }}) }}
+			{{ form_label(adminAddressCreateForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__address-last-name-label display-none' }}) }}
+			{{ form_widget(adminAddressCreateForm.lastName, { 'id': 'address-last-name-input', 'attr': { 'class': 'form-field__input form-field__user-last-name-input form-field__input_color_black', 'placeholder': 'Nom' }}) }}
 			<p class="error-message error-message_color_red error-message-user-last-name-empty display-none">
 				Merci de saisir un nom.
 			</p>
-			{{ form_errors(adminCreateAddressForm.lastName) }}
+			{{ form_errors(adminAddressCreateForm.lastName) }}
 		</div>
 		{# streetNumber #}
 		<div class="form-field">
-			{{ form_label(adminCreateAddressForm, 'Numéro de rue', { 'label_attr': { 'class': 'form-field__label form-field__address-street-number-label display-none' }}) }}
-			{{ form_widget(adminCreateAddressForm.streetNumber, { 'id': 'address-street-number-input', 'attr': { 'class': 'form-field__input form-field__address-street-number-input form-field__input_color_black', 'placeholder': 'Numéro de rue' }}) }}
+			{{ form_label(adminAddressCreateForm, 'Numéro de rue', { 'label_attr': { 'class': 'form-field__label form-field__address-street-number-label display-none' }}) }}
+			{{ form_widget(adminAddressCreateForm.streetNumber, { 'id': 'address-street-number-input', 'attr': { 'class': 'form-field__input form-field__address-street-number-input form-field__input_color_black', 'placeholder': 'Numéro de rue' }}) }}
 			<p class="error-message error-message_color_red error-message-adress-street-number display-none">
 				Merci de saisir un numéro de rue.
 			</p>
-			{{ form_errors(adminCreateAddressForm.streetNumber) }}
+			{{ form_errors(adminAddressCreateForm.streetNumber) }}
 		</div>
 		{# streetName #}
 		<div class="form-field">
-			{{ form_label(adminCreateAddressForm, 'Nom de rue', { 'label_attr': { 'class': 'form-field__label form-field__address-street-name-label display-none' }}) }}
-			{{ form_widget(adminCreateAddressForm.streetName, { 'id': 'address-street-name-input', 'attr': { 'class': 'form-field__input form-field__address-street-name-input form-field__input_color_black', 'placeholder': 'Nom de rue' }}) }}
+			{{ form_label(adminAddressCreateForm, 'Nom de rue', { 'label_attr': { 'class': 'form-field__label form-field__address-street-name-label display-none' }}) }}
+			{{ form_widget(adminAddressCreateForm.streetName, { 'id': 'address-street-name-input', 'attr': { 'class': 'form-field__input form-field__address-street-name-input form-field__input_color_black', 'placeholder': 'Nom de rue' }}) }}
 			<p class="error-message error-message_color_red error-message-address-street-name-empty display-none">
 				Merci de saisir un nom de rue.
 			</p>
-			{{ form_errors(adminCreateAddressForm.streetName) }}
+			{{ form_errors(adminAddressCreateForm.streetName) }}
 		</div>
 		{# zipCode #}
 		<div class="form-field">
-			{{ form_label(adminCreateAddressForm, 'Code postal', { 'label_attr': { 'class': 'form-field__label form-field__address-zip-code-label display-none' }}) }}
-			{{ form_widget(adminCreateAddressForm.zipCode, { 'id': 'address-zip-code-input', 'attr': { 'class': 'form-field__input form-field__address-zip-code-input form-field__input_color_black', 'placeholder': 'Code postal' }}) }}
+			{{ form_label(adminAddressCreateForm, 'Code postal', { 'label_attr': { 'class': 'form-field__label form-field__address-zip-code-label display-none' }}) }}
+			{{ form_widget(adminAddressCreateForm.zipCode, { 'id': 'address-zip-code-input', 'attr': { 'class': 'form-field__input form-field__address-zip-code-input form-field__input_color_black', 'placeholder': 'Code postal' }}) }}
 			<p class="error-message error-message_color_red error-message-address-zip-code display-none">
 				Merci de saisir un code postal.
 			</p>
-			{{ form_errors(adminCreateAddressForm.zipCode) }}
+			{{ form_errors(adminAddressCreateForm.zipCode) }}
 		</div>
 		{# city #}
 		<div class="form-field">
-			{{ form_label(adminCreateAddressForm, 'Ville', { 'label_attr': { 'class': 'form-field__label form-field__address-city-label display-none' }}) }}
-			{{ form_widget(adminCreateAddressForm.city, { 'id': 'address-city-input', 'attr': { 'class': 'form-field__input form-field__address-city-input form-field__input_color_black', 'placeholder': 'Ville' }}) }}
+			{{ form_label(adminAddressCreateForm, 'Ville', { 'label_attr': { 'class': 'form-field__label form-field__address-city-label display-none' }}) }}
+			{{ form_widget(adminAddressCreateForm.city, { 'id': 'address-city-input', 'attr': { 'class': 'form-field__input form-field__address-city-input form-field__input_color_black', 'placeholder': 'Ville' }}) }}
 			<p class="error-message error-message_color_red error-message-address-city-empty display-none">
 				Merci de saisir un nom de ville.
 			</p>
-			{{ form_errors(adminCreateAddressForm.city) }}
+			{{ form_errors(adminAddressCreateForm.city) }}
 		</div>
 		{# country #}
 		<div class="form-field">
-			{{ form_label(adminCreateAddressForm, 'Pays', { 'label_attr': { 'class': 'form-field__label form-field__address-country-label display-none' }}) }}
-			{{ form_widget(adminCreateAddressForm.country, { 'id': 'address-country-input', 'attr': { 'class': 'form-field__input form-field__address-country-input form-field__input_color_black', 'placeholder': 'Pays' }}) }}
-			<p class="error-message error-message_color_red error-message-empty-country display-none">
+			{{ form_label(adminAddressCreateForm, 'Pays', { 'label_attr': { 'class': 'form-field__label form-field__address-country-label display-none' }}) }}
+			{{ form_widget(adminAddressCreateForm.country, { 'id': 'address-country-input', 'attr': { 'class': 'form-field__input form-field__address-country-input form-field__input_color_black', 'placeholder': 'Pays' }}) }}
+			<p class="error-message error-message_color_red error-message-address-country-empty display-none">
 				Merci de saisir un nom de pays.
 			</p>
-			{{ form_errors(adminCreateAddressForm.country) }}
+			{{ form_errors(adminAddressCreateForm.country) }}
 		</div>
 		{# phoneNumber #}
 		<div class="form-field">
-			{{ form_label(adminCreateAddressForm, 'Numéro de téléphone mobile', { 'label_attr': { 'class': 'form-field__label form-field__address-phone-number-label display-none' }}) }}
-			{{ form_widget(adminCreateAddressForm.phoneNumber, { 'id': 'address-phone-number-input', 'attr': { 'class': 'form-field__input form-field__phone-number-input form-field__input_color_black', 'placeholder': 'Numéro de téléphone mobile' }}) }}
+			{{ form_label(adminAddressCreateForm, 'Numéro de téléphone mobile', { 'label_attr': { 'class': 'form-field__label form-field__address-phone-number-label display-none' }}) }}
+			{{ form_widget(adminAddressCreateForm.phoneNumber, { 'id': 'address-phone-number-input', 'attr': { 'class': 'form-field__input form-field__phone-number-input form-field__input_color_black', 'placeholder': 'Numéro de téléphone mobile' }}) }}
 			<p class="error-message error-message_color_red error-message-phone-number display-none">
 				Merci de saisir un numéro de téléphone mobile.
 			</p>
-			{{ form_errors(adminCreateAddressForm.phoneNumber) }}
+			{{ form_errors(adminAddressCreateForm.phoneNumber) }}
 		</div>
-		{# adminCreateAddressForm submit button #}
+		{# adminAddressCreateForm submit button #}
 		<button type="submit" class="page__button page__create-button page__submit-button page__button_background-color_dodger-blue page__button_color_white" id="admin-address-create-button">
 			Créer
 		</button>
-		{{ form_end(adminCreateAddressForm) }}
-		{# END: adminCreateAddressForm #}
+		{{ form_end(adminAddressCreateForm) }}
+		{# END: adminAddressCreateForm #}
 	</section>
 {% endblock %}
 {# END: admin_address_create #}
