--- a/templates/admin/category/create.html.twig
+++ b/templates/admin/category/create.html.twig
@@ -9,23 +9,23 @@
 {% block body %}
 	<section class="page">
 		<h2>Créer une Catégorie</h2>
-		{# START :adminCreateCategoryForm #}
-		{{ form_start(adminCreateCategoryForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-category-create-form' }}) }}
+		{# START :adminCategoryCreateForm #}
+		{{ form_start(adminCategoryCreateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-category-create-form' }}) }}
 		{# name #}
 		<div class="form-field">
-			{{ form_label(adminCreateCategoryForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__category-name-label display-none' }}) }}
-			{{ form_widget(adminCreateCategoryForm.name, { 'id': 'category-name-input', 'attr': {'class': 'form-field__input form-field__category-name-input form-field__input_color_black', 'placeholder': 'Nom' }}) }}
+			{{ form_label(adminCategoryCreateForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__category-name-label display-none' }}) }}
+			{{ form_widget(adminCategoryCreateForm.name, { 'id': 'category-name-input', 'attr': {'class': 'form-field__input form-field__category-name-input form-field__input_color_black', 'placeholder': 'Nom' }}) }}
 			<p class="error-message error-message_color_red error-message-category-name-empty display-none">
 				Merci de saisir un nom.
 			</p>
-			{{ form_errors(adminCreateCategoryForm.name) }}
+			{{ form_errors(adminCategoryCreateForm.name) }}
 		</div>
-		{# adminCreateCategoryForm submit button #}
+		{# adminCategoryCreateForm submit button #}
 		<button type="submit" class="page__button page__create-button page__submit-button page__button_background-color_dodger-blue page__button_color_white" id="admin-category-create-button">
 			Créer
 		</button>
-		{{ form_end(adminCreateCategoryForm) }}
-		{# END: adminCreateCategoryForm #}
+		{{ form_end(adminCategoryCreateForm) }}
+		{# END: adminCategoryCreateForm #}
 	</section>
 {% endblock %}
 {# END: admin_category_create #}
