--- a/templates/admin/category/update.html.twig
+++ b/templates/admin/category/update.html.twig
@@ -12,24 +12,24 @@
 	<section class="page">
 		<h2>Mettre à jour Catégorie :
 			{{ category.name }}</h2>
-		{# START :adminUpdateCategoryForm #}
-		{{ form_start(adminUpdateCategoryForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-category-update-form' }}) }}
+		{# START :adminCategoryUpdateForm #}
+		{{ form_start(adminCategoryUpdateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-category-update-form' }}) }}
 		{# name #}
 		<div class="form-field">
-			{{ form_label(adminUpdateCategoryForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__category-name-label display-none' }}) }}
+			{{ form_label(adminCategoryUpdateForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__category-name-label display-none' }}) }}
 
-			{{ form_widget(adminUpdateCategoryForm.name, { 'id': 'category-name-input', 'attr': {'class': 'form-field__input form-field__category-name-input form-field__input_color_black', 'placeholder': 'Nom' }}) }}
+			{{ form_widget(adminCategoryUpdateForm.name, { 'id': 'category-name-input', 'attr': {'class': 'form-field__input form-field__category-name-input form-field__input_color_black', 'placeholder': 'Nom' }}) }}
 			<p class="error-message error-message_color_red error-message-category-name-empty display-none">
 				Merci de saisir un nom.
 			</p>
-			{{ form_errors(adminUpdateCategoryForm.name) }}
+			{{ form_errors(adminCategoryUpdateForm.name) }}
 		</div>
-		{# adminUpdateCategoryForm submit button #}
+		{# adminCategoryUpdateForm submit button #}
 		<button type="submit" class="page__button page__update-button page__submit-button page__button_background-color_orange page__button_color_white" id="admin-category-update-button">
 			Mettre à jour
 		</button>
-		{{ form_end(adminUpdateCategoryForm) }}
-		{# END: adminUpdateCategoryForm #}
+		{{ form_end(adminCategoryUpdateForm) }}
+		{# END: adminCategoryUpdateForm #}
 	</section>
 {% endblock %}
 {# END: admin_category_update #}
