--- a/templates/admin/product/create.html.twig
+++ b/templates/admin/product/create.html.twig
@@ -9,65 +9,66 @@
 {% block body %}
 	<section class="page">
 		<h2>Créer un Produit</h2>
-		{# START :adminCreateProductForm #}
-		{{ form_start(adminCreateProductForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-product-create-form' }}) }}
+		{# START :adminProductCreateForm #}
+		{{ form_start(adminProductCreateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-product-create-form' }}) }}
 		{# picture #}
 		<div class="form-field">
-			{{ form_label(adminCreateProductForm, 'Photo', { 'label_attr': { 'class': 'form-field__label form-field__product-picture-label display-none' }}) }}
-			{{ form_widget(adminCreateProductForm.picture, { 'id': 'product-picture-input', 'attr': { 'class': 'form-field__input form-field__product-picture-input form-field__input_color_black' }}) }}
+			{{ form_label(adminProductCreateForm, 'Photo', { 'label_attr': { 'class': 'form-field__label form-field__product-picture-label display-none' }}) }}
+			{{ form_widget(adminProductCreateForm.picture, { 'id': 'product-picture-input', 'attr': { 'class': 'form-field__input form-field__product-picture-input form-field__input_color_black' }}) }}
 			<p class="error-message error-message_color_red error-message-product-picture-mime-type display-none">
 				Merci de télécharger un fichier au format PDF, PNG, JPEG ou SVG.
 			</p>
 			<p class="error-message error-message_color_red error-message-product-picture-size display-none">
 				Merci de télécharger un fichier de maximum 300 000 bytes.</p>
-			{{ form_errors(adminCreateProductForm.picture) }}
+			{{ form_errors(adminProductCreateForm.picture) }}
 		</div>
 		{# name #}
 		<div class="form-field">
-			{{ form_label(adminCreateProductForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__product-name-label display-none' }}) }}
-			{{ form_widget(adminCreateProductForm.name, { 'id': 'product-name-input', 'attr': {'class': 'form-field__input form-field__product-name-input form-field__input_color_black', 'placeholder': 'Nom' }}) }}
+			{{ form_label(adminProductCreateForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__product-name-label display-none' }}) }}
+			{{ form_widget(adminProductCreateForm.name, { 'id': 'product-name-input', 'attr': {'class': 'form-field__input form-field__product-name-input form-field__input_color_black', 'placeholder': 'Nom' }}) }}
 			<p class="error-message error-message_color_red error-message-product-name-empty display-none">
 				Merci de saisir un nom.
 			</p>
-			{{ form_errors(adminCreateProductForm.name) }}
+			{{ form_errors(adminProductCreateForm.name) }}
 		</div>
 		{# price #}
 		<div class="form-field">
-			{{ form_label(adminCreateProductForm, 'Prix', { 'label_attr': { 'class': 'form-field__label form-field__product-price-label display-none' }}) }}
-			{{ form_widget(adminCreateProductForm.price, { 'id': 'product-price-input', 'attr': {'class': 'form-field__input form-field__product-price-input form-field__input_color_black', 'placeholder': 'Prix en euros' }}) }}
+			{{ form_label(adminProductCreateForm, 'Prix', { 'label_attr': { 'class': 'form-field__label form-field__product-price-label display-none' }}) }}
+			{{ form_widget(adminProductCreateForm.price, { 'id': 'product-price-input', 'attr': {'class': 'form-field__input form-field__product-price-input form-field__input_color_black', 'placeholder': 'Prix en euros' }}) }}
 			<p class="error-message error-message_color_red error-message-product-price display-none">
 				Merci de saisir un prix en euros.
 			</p>
-			{{ form_errors(adminCreateProductForm.price) }}
+			{{ form_errors(adminProductCreateForm.price) }}
 		</div>
 		{# description #}
 		<div class="form-field">
-			{{ form_label(adminCreateProductForm, 'Description', { 'label_attr': { 'class': 'form-field__label form-field__product-description-label display-none' }}) }}
-			{{ form_widget(adminCreateProductForm.description, { 'id': 'product-description-input', 'attr': {'class': 'form-field__input form-field__product-description-input form-field__input_color_black', 'placeholder': 'Description' }}) }}
+			{{ form_label(adminProductCreateForm, 'Description', { 'label_attr': { 'class': 'form-field__label form-field__product-description-label display-none' }}) }}
+			{{ form_widget(adminProductCreateForm.description, { 'id': 'product-description-input', 'attr': {'class': 'form-field__input form-field__product-description-input form-field__input_color_black', 'placeholder': 'Description' }}) }}
 			<p class="error-message error-message_color_red error-message-product-description-empty display-none">
 				Merci de saisir une description.
 			</p>
-			{{ form_errors(adminCreateProductForm.description) }}
+			{{ form_errors(adminProductCreateForm.description) }}
 		</div>
 		{# availability #}
 		<div class="form-field">
-			{{ form_label(adminCreateProductForm, 'Disponibilité :', { 'label_attr': { 'class': 'form-field__label' }}) }}
-			{{ form_widget(adminCreateProductForm.availability) }}
+			{{ form_label(adminProductCreateForm, 'Disponibilité:', { 'label_attr': { 'class': 'form-field__label' }}) }}
+			{{ form_widget(adminProductCreateForm.availability) }}
 			<p class="error-message error-message_color_red error-message-product-availability-not-checked display-none">
-				Merci de sélectionnner une valeur.
+				Merci de sélectionner une valeur.
 			</p>
+			{{ form_errors(adminProductCreateForm.availability) }}
 		</div>
 		{# category #}
 		<div class="form-field">
-			{{ form_label(adminCreateProductForm, 'Catégorie :', { 'label_attr': { 'class': 'form-field__label' }}) }}
-			{{ form_widget(adminCreateProductForm.category) }}
-			<p class="error-message error-message_color_red error-message-category-product-not-checked display-none">Merci de sélectionnner une catégorie.</p>
-			{{ form_errors(adminCreateProductForm.category) }}
+			{{ form_label(adminProductCreateForm, 'Catégorie :', { 'label_attr': { 'class': 'form-field__label' }}) }}
+			{{ form_widget(adminProductCreateForm.category) }}
+			<p class="error-message error-message_color_red error-message-category-product-not-checked display-none">Merci de sélectionner une catégorie.</p>
+			{{ form_errors(adminProductCreateForm.category) }}
 		</div>
-		{# adminCreateProductForm submit button #}
+		{# adminProductCreateForm submit button #}
 		<button type="submit" class="page__button page__create-button page__submit-button page__button_background-color_dodger-blue page__button_color_white" id="admin-product-create-button">Créer</button>
-		{{ form_end(adminCreateProductForm) }}
-		{# END: adminCreateProductForm #}
+		{{ form_end(adminProductCreateForm) }}
+		{# END: adminProductCreateForm #}
 	</section>
 {% endblock %}
 {# END: admin_product_create #}
