--- a/templates/admin/product/update.html.twig
+++ b/templates/admin/product/update.html.twig
@@ -12,74 +12,74 @@
 	<section class="page">
 		<h2>Mettre à jour Produit :
 			{{ product.name }}</h2>
-		{# START :adminUpdateProductForm #}
-		{{ form_start(adminUpdateProductForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-product-update-form' }}) }}
+		{# START :adminProductUpdateForm #}
+		{{ form_start(adminProductUpdateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-product-update-form' }}) }}
 		{# picture #}
 		<div class="form-field-picture">
 			<img class="page__product-picture" src="{{ asset('assets/uploads/products/' ~ product.picture) }}" alt="image-{{ product.name }}"/>
 		</div>
 		{# upload #}
 		<div class="form-field">
-			{{ form_label(adminUpdateProductForm, 'Photo', { 'label_attr': { 'class': 'form-field__label form-field__product-picture-label display-none' }}) }}
-			{{ form_widget(adminUpdateProductForm.upload, { 'id': 'product-picture-input', 'attr': { 'class': 'form-field__input form-field__product-picture-input form-field__input_color_black' }}) }}
+			{{ form_label(adminProductUpdateForm, 'Photo', { 'label_attr': { 'class': 'form-field__label form-field__product-picture-label display-none' }}) }}
+			{{ form_widget(adminProductUpdateForm.upload, { 'id': 'product-picture-input', 'attr': { 'class': 'form-field__input form-field__product-picture-input form-field__input_color_black' }}) }}
 			<p class="error-message error-message_color_red error-message-product-picture-mime-type display-none">
 				Merci de télécharger un fichier au format PDF, PNG, JPEG ou SVG.
 			</p>
 			<p class="error-message error-message_color_red error-message-product-picture-size display-none">
 				Merci de télécharger un fichier de maximum 300 000 bytes.</p>
-			{{ form_errors(adminUpdateProductForm.upload) }}
+			{{ form_errors(adminProductUpdateForm.upload) }}
 		</div>
 		{# name #}
 		<div class="form-field">
-			{{ form_label(adminUpdateProductForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__product-name-label display-none' }}) }}
-			{{ form_widget(adminUpdateProductForm.name, { 'id': 'product-name-input', 'attr': {'class': 'form-field__input form-field__product-name-input form-field__input_color_black', 'placeholder': 'Nom' }}) }}
+			{{ form_label(adminProductUpdateForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__product-name-label display-none' }}) }}
+			{{ form_widget(adminProductUpdateForm.name, { 'id': 'product-name-input', 'attr': {'class': 'form-field__input form-field__product-name-input form-field__input_color_black', 'placeholder': 'Nom' }}) }}
 			<p class="error-message error-message_color_red error-message-product-name-empty display-none">
 				Merci de saisir un nom.
 			</p>
-			{{ form_errors(adminUpdateProductForm.name) }}
+			{{ form_errors(adminProductUpdateForm.name) }}
 		</div>
 		{# price #}
 		<div class="form-field">
-			{{ form_label(adminUpdateProductForm, 'Prix', { 'label_attr': { 'class': 'form-field__label form-field__product-price-label display-none' }}) }}
-			{{ form_widget(adminUpdateProductForm.price, { 'id': 'product-price-input', 'attr': {'class': 'form-field__input form-field__product-price-input form-field__input_color_black', 'placeholder': 'Prix en euros' }}) }}
+			{{ form_label(adminProductUpdateForm, 'Prix', { 'label_attr': { 'class': 'form-field__label form-field__product-price-label display-none' }}) }}
+			{{ form_widget(adminProductUpdateForm.price, { 'id': 'product-price-input', 'attr': {'class': 'form-field__input form-field__product-price-input form-field__input_color_black', 'placeholder': 'Prix en euros' }}) }}
 			<p class="error-message error-message_color_red error-message-product-price display-none">
 				Merci de saisir un prix.
 			</p>
-			{{ form_errors(adminUpdateProductForm.price) }}
+			{{ form_errors(adminProductUpdateForm.price) }}
 		</div>
 		{# description #}
 		<div class="form-field">
-			{{ form_label(adminUpdateProductForm, 'Description', { 'label_attr': { 'class': 'form-field__label form-field__product-description-label display-none' }}) }}
-			{{ form_widget(adminUpdateProductForm.description, { 'id': 'product-description-input', 'attr': {'class': 'form-field__input form-field__product-description-input form-field__input_color_black', 'placeholder': 'Description' }}) }}
+			{{ form_label(adminProductUpdateForm, 'Description', { 'label_attr': { 'class': 'form-field__label form-field__product-description-label display-none' }}) }}
+			{{ form_widget(adminProductUpdateForm.description, { 'id': 'product-description-input', 'attr': {'class': 'form-field__input form-field__product-description-input form-field__input_color_black', 'placeholder': 'Description' }}) }}
 			<p class="error-message error-message_color_red error-message-product-description-empty display-none">
 				Merci de saisir une description.
 			</p>
-			{{ form_errors(adminUpdateProductForm.description) }}
+			{{ form_errors(adminProductUpdateForm.description) }}
 		</div>
 		{# availability #}
 		<div class="form-field">
-			{{ form_label(adminUpdateProductForm, 'Disponibilité :', { 'label_attr': { 'class': 'form-field__label' }}) }}
-			{{ form_widget(adminUpdateProductForm.availability) }}
+			{{ form_label(adminProductUpdateForm, 'Disponibilité:', { 'label_attr': { 'class': 'form-field__label' }}) }}
+			{{ form_widget(adminProductUpdateForm.availability) }}
 			<p class="error-message error-message_color_red error-message-product-availability-not-checked display-none">
-				Merci de sélectionnner une valeur.
+				Merci de sélectionner une valeur.
 			</p>
-			{{ form_errors(adminUpdateProductForm.availability) }}
+			{{ form_errors(adminProductUpdateForm.availability) }}
 		</div>
 		{# category #}
 		<div class="form-field">
-			{{ form_label(adminUpdateProductForm, 'Categorie :', { 'label_attr': { 'class': 'form-field__label' }}) }}
-			{{ form_widget(adminUpdateProductForm.category) }}
+			{{ form_label(adminProductUpdateForm, 'Categorie :', { 'label_attr': { 'class': 'form-field__label' }}) }}
+			{{ form_widget(adminProductUpdateForm.category) }}
 			<p class="error-message error-message_color_red error-message-category-product-not-checked display-none">
-				Merci de sélectionnner une catégorie.
+				Merci de sélectionner une catégorie.
 			</p>
-			{{ form_errors(adminUpdateProductForm.category) }}
+			{{ form_errors(adminProductUpdateForm.category) }}
 		</div>
-		{# Submit adminUpdateProductForm button #}
+		{# Submit adminProductUpdateForm button #}
 		<button type="submit" class="page__button page__update-button page__submit-button page__button_background-color_orange page__button_color_white" id="admin-product-update-button">
 			Mettre à jour
 		</button>
-		{{ form_end(adminUpdateProductForm) }}
-		{# END: adminUpdateProductForm #}
+		{{ form_end(adminProductUpdateForm) }}
+		{# END: adminProductUpdateForm #}
 	</section>
 {% endblock %}
 {# END: admin_product_update #}
