--- a/templates/admin/purchase/update.html.twig
+++ b/templates/admin/purchase/update.html.twig
@@ -20,35 +20,35 @@
 			{{ user.firstName }}
 			{{ user.lastName }}
 		</h2>
-		{# START: adminUpdatePurchaseForm #}
-		{{ form_start(adminUpdatePurchaseForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-purchase-update-form' }}) }}
+		{# START: adminPurchaseUpdateForm #}
+		{{ form_start(adminPurchaseUpdateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-purchase-update-form' }}) }}
 		{# status #}
 		<div class="form-field">
-			{{ form_label(adminUpdatePurchaseForm, 'Statut :', { 'label_attr': { 'class': 'form-field__label form-field__purchase-status-label' }}) }}
-			{{ form_widget(adminUpdatePurchaseForm.status) }}
+			{{ form_label(adminPurchaseUpdateForm, 'Statut :', { 'label_attr': { 'class': 'form-field__label form-field__purchase-status-label' }}) }}
+			{{ form_widget(adminPurchaseUpdateForm.status) }}
 			<p class="error-message error-message_color_red error-message-purchase-status-not-checked display-none">
 				Merci de sélectionner un statut.
 			</p>
-			{{ form_errors(adminUpdatePurchaseForm.status) }}
+			{{ form_errors(adminPurchaseUpdateForm.status) }}
 		</div>
 		{# upload #}
 		<div class="form-field">
-			{{ form_label(adminUpdatePurchaseForm, 'Facture :', { 'label_attr': { 'class': 'form-field__label form-field__purchase-bill-label' }}) }}
-			{{ form_widget(adminUpdatePurchaseForm.upload, { 'id': 'purchase-bill-input', 'attr': { 'class': 'form-field__input form-field__purchase-bill-input form-field__input_color_black' }}) }}
+			{{ form_label(adminPurchaseUpdateForm, 'Facture :', { 'label_attr': { 'class': 'form-field__label form-field__purchase-bill-label' }}) }}
+			{{ form_widget(adminPurchaseUpdateForm.upload, { 'id': 'purchase-bill-input', 'attr': { 'class': 'form-field__input form-field__purchase-bill-input form-field__input_color_black' }}) }}
 			<p class="error-message error-message_color_red error-message-purchase-bill-mime-type display-none">
 				Merci de télécharger un fichier au format PDF, PNG, JPEG ou SVG.
 			</p>
 			<p class="error-message error-message_color_red error-message-purchase-bill-size display-none">
 				Merci de télécharger un fichier de maximum 300 000 bytes.
 			</p>
-			{{ form_errors(adminUpdatePurchaseForm.upload) }}
+			{{ form_errors(adminPurchaseUpdateForm.upload) }}
 		</div>
-		{# adminUpdatePurchaseForm submit button #}
+		{# adminPurchaseUpdateForm submit button #}
 		<button type="submit" class="page__button page__update-button page__submit-button page__button_background-color_orange page__button_color_white" id="admin-purchase-update-button">
 			Mettre à jour
 		</button>
-		{{ form_end(adminUpdatePurchaseForm) }}
-		{# END: adminUpdatePurchaseForm #}
+		{{ form_end(adminPurchaseUpdateForm) }}
+		{# END: adminPurchaseUpdateForm #}
 	</section>
 {% endblock %}
 {# END: admin_purchase_update #}
