--- a/templates/admin/user/create.html.twig
+++ b/templates/admin/user/create.html.twig
@@ -9,59 +9,59 @@
 {% block body %}
 <section class="page">
 	<h2>Créer un Utilisateur</h2>
-	{# START :adminCreateUserForm #}
-	{{ form_start(adminCreateUserForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-user-create-form' }}) }}
+	{# START :adminUserCreateForm #}
+	{{ form_start(adminUserCreateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-user-create-form' }}) }}
 	{# civilityTitle #}
 	<div class="form-field">
-		{{ form_widget(adminCreateUserForm.civilityTitle) }}
+		{{ form_widget(adminUserCreateForm.civilityTitle) }}
 		<p class="error-message error-message_color_red error-message-user-gender-not-checked display-none">
-			Merci de sélectionnner une valeur.
+			Merci de sélectionner une valeur.
 		</p>
-		{{ form_errors(adminCreateUserForm.civilityTitle) }}
+		{{ form_errors(adminUserCreateForm.civilityTitle) }}
 	</div>
 	{# picture #}
 	<div class="form-field">
-		{{ form_label(adminCreateUserForm, 'Photo de profil', { 'label_attr': { 'class': 'form-field__label form-field__user-picture-label display-none' }}) }}
-		{{ form_widget(adminCreateUserForm.picture, { 'id': 'user-picture-input', 'attr': { 'class': 'form-field__input form-field__user-picture-input form-field__input_color_black' }}) }}
+		{{ form_label(adminUserCreateForm, 'Photo de profil', { 'label_attr': { 'class': 'form-field__label form-field__user-picture-label display-none' }}) }}
+		{{ form_widget(adminUserCreateForm.picture, { 'id': 'user-picture-input', 'attr': { 'class': 'form-field__input form-field__user-picture-input form-field__input_color_black' }}) }}
 		<p class="error-message error-message_color_red error-message-user-picture-mime-type display-none">
 			Merci de télécharger un fichier au format PDF, PNG, JPEG ou SVG.
 		</p>
 		<p class="error-message error-message_color_red error-message-user-picture-size display-none">
 			Merci de télécharger un fichier de maximum 300 000 bytes.
 		</p>
-		{{ form_errors(adminCreateUserForm.picture) }}
+		{{ form_errors(adminUserCreateForm.picture) }}
 	</div>
 	{# firstName #}
 	<div class="form-field">
-		{{ form_label(adminCreateUserForm, 'Prénom', { 'label_attr': { 'class': 'form-field__label form-field__user-first-name-label display-none' }}) }}
-		{{ form_widget(adminCreateUserForm.firstName, { 'id': 'user-first-name-input', 'attr': {'class': 'form-field__input form-field__user-first-name-input form-field__input_color_black', 'placeholder': 'Prénom' }}) }}
+		{{ form_label(adminUserCreateForm, 'Prénom', { 'label_attr': { 'class': 'form-field__label form-field__user-first-name-label display-none' }}) }}
+		{{ form_widget(adminUserCreateForm.firstName, { 'id': 'user-first-name-input', 'attr': {'class': 'form-field__input form-field__user-first-name-input form-field__input_color_black', 'placeholder': 'Prénom' }}) }}
 		<p class="error-message error-message_color_red error-message-user-first-name-empty display-none">
 			Merci de saisir un prénom.
 		</p>
-		{{ form_errors(adminCreateUserForm.firstName) }}
+		{{ form_errors(adminUserCreateForm.firstName) }}
 	</div>
 	{# lastName #}
 	<div class="form-field">
-		{{ form_label(adminCreateUserForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__user-last-name-label display-none' }}) }}
-		{{ form_widget(adminCreateUserForm.lastName, { 'id': 'user-last-name-input', 'attr': { 'class': 'form-field__input form-field__user-last-name-input form-field__input_color_black', 'placeholder': 'Nom' }}) }}
+		{{ form_label(adminUserCreateForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__user-last-name-label display-none' }}) }}
+		{{ form_widget(adminUserCreateForm.lastName, { 'id': 'user-last-name-input', 'attr': { 'class': 'form-field__input form-field__user-last-name-input form-field__input_color_black', 'placeholder': 'Nom' }}) }}
 		<p class="error-message error-message_color_red error-message-user-last-name-empty display-none">
 			Merci de saisir un nom.
 		</p>
-		{{ form_errors(adminCreateUserForm.lastName) }}
+		{{ form_errors(adminUserCreateForm.lastName) }}
 	</div>
 	{# email #}
 	<div class="form-field">
-		{{ form_label(adminCreateUserForm, 'E-mail', { 'label_attr': { 'class': 'form-field__label form-field__user-e-mail-label display-none' }}) }}
-		{{ form_widget(adminCreateUserForm.email, { 'id': 'user-e-mail-input', 'attr': { 'class': 'form-field__input form-field__user-e-mail-input form-field__input_color_black', 'placeholder': 'E-mail' }}) }}
+		{{ form_label(adminUserCreateForm, 'E-mail', { 'label_attr': { 'class': 'form-field__label form-field__user-e-mail-label display-none' }}) }}
+		{{ form_widget(adminUserCreateForm.email, { 'id': 'user-e-mail-input', 'attr': { 'class': 'form-field__input form-field__user-e-mail-input form-field__input_color_black', 'placeholder': 'E-mail' }}) }}
 		<p class="error-message error-message_color_red error-message-user-e-mail display-none">
 			Merci de saisir un e-mail.
 		</p>
-		{{ form_errors(adminCreateUserForm.email) }}
+		{{ form_errors(adminUserCreateForm.email) }}
 	</div>
 	{# password #}
 	<div class="form-field">
-		{{ form_label(adminCreateUserForm, 'Mot de passe', { 'label_attr': { 'class': 'form-field__label form-field__user-password-label display-none' }}) }}
-		{{ form_widget(adminCreateUserForm.password, { 'id': 'user-password-input', 'attr': {'class': 'form-field__input form-field__user-password-input form-field__input_color_black', 'placeholder': 'Mot de passe' }}) }}
+		{{ form_label(adminUserCreateForm, 'Mot de passe', { 'label_attr': { 'class': 'form-field__label form-field__user-password-label display-none' }}) }}
+		{{ form_widget(adminUserCreateForm.password, { 'id': 'user-password-input', 'attr': {'class': 'form-field__input form-field__user-password-input form-field__input_color_black', 'placeholder': 'Mot de passe' }}) }}
 		<p class="error-message error-message_color_red error-message-user-password-empty display-none">
 			Merci de saisir un mot de passe.
 		</p>
@@ -80,21 +80,21 @@
 		<p class="error-message error-message_color_red error-message-user-password-special-character display-none">
 			Le mot de passe doit contenir au moins un caractére spécial.
 		</p>
-		{{ form_errors(adminCreateUserForm.password) }}
+		{{ form_errors(adminUserCreateForm.password) }}
 	</div>
 	{# roles #}
 	<div class="form-field">
-		{{ form_label(adminCreateUserForm, 'Merci de selectionner le ou les potentiels rôles de l\'utilisateur :', { 'label_attr': { 'class': '' }}) }}
-		{{ form_widget(adminCreateUserForm.roles) }}
-			<p class="error-message error-message_color_red error-message-user-roles-not-checked display-none">
-				Merci de sélectionnner une valeur.
-			</p>
-		{{ form_errors(adminCreateUserForm.roles) }}
+		{{ form_label(adminUserCreateForm, 'Merci de selectionner le ou les potentiels rôles de l\'utilisateur:', { 'label_attr': { 'class': 'form-field__label form-field__user-roles-label' }}) }}
+		{{ form_widget(adminUserCreateForm.roles) }}
+		<p class="error-message error-message_color_red error-message-user-roles-not-checked display-none">
+			Merci de sélectionner au minimum un rôle.
+		</p>
+		{{ form_errors(adminUserCreateForm.roles) }}
     </div>
-	{# adminCreateUserForm submit button #}
+	{# adminUserCreateForm submit button #}
 		<button type="submit" class="page__button page__create-button page__submit-button page__button_background-color_dodger-blue page__button_color_white" id="admin-user-create-button">Créer</button>
-    	{{ form_end(adminCreateUserForm) }}
-    	{# END: adminCreateUserForm #}
+    	{{ form_end(adminUserCreateForm) }}
+    	{# END: adminUserCreateForm #}
 	 </section>
 {% endblock %}
 {# END: admin_user_create #}
