--- a/templates/admin/user/update.html.twig
+++ b/templates/admin/user/update.html.twig
@@ -14,65 +14,65 @@
 	<h2>Mettre à jour Utilisateur :
 		{{ user.firstName }}
 		{{ user.lastName }}</h2>
-	{# START :adminUpdateUserForm #}
-	{{ form_start(adminUpdateUserForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-user-update-form' }}) }}
+	{# START :adminUserUpdateForm #}
+	{{ form_start(adminUserUpdateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-user-update-form' }}) }}
 	{# picture #}
 	<div class="form-field-picture">
 		<img class="page__user-picture" src="{{ asset('assets/uploads/users/' ~ user.picture) }}" alt="{{ user.firstName }}"/>
 	</div>
 	{# upload #}
 	<div class="form-field">
-		{{ form_label(adminUpdateUserForm, 'Photo de profil', { 'label_attr': { 'class': 'form-field__label form-field__user-picture-label display-none' }}) }}
-		{{ form_widget(adminUpdateUserForm.upload, { 'id': 'user-picture-input', 'attr': { 'class': 'form-field__input form-field__user-picture-input form-field__input_color_black' }}) }}
+		{{ form_label(adminUserUpdateForm, 'Photo de profil', { 'label_attr': { 'class': 'form-field__label form-field__user-picture-label display-none' }}) }}
+		{{ form_widget(adminUserUpdateForm.upload, { 'id': 'user-picture-input', 'attr': { 'class': 'form-field__input form-field__user-picture-input form-field__input_color_black' }}) }}
 		<p class="error-message error-message_color_red error-message-user-picture-mime-type display-none">
 			Merci de télécharger un fichier au format PDF, PNG, JPEG ou SVG.
 		</p>
 		<p class="error-message error-message_color_red error-message-user-picture-size display-none">
 			Merci de télécharger un fichier de maximum 300 000 bytes.
 		</p>
-		{{ form_errors(adminUpdateUserForm.upload) }}
+		{{ form_errors(adminUserUpdateForm.upload) }}
 	</div>
 	{# delete picture #}
 	<a class="page__link page__delete-user-picture-link page__link_background-color_red page__link_color_white" id="delete-user-picture-link" href="{{ path('admin_user_delete_picture', {'id':user.id, 'token':csrf_token('delete-user-picture' ~ user.id)} ) }}">Supprimer la photo</a>
 	{# civilityTitle #}
 	<div class="form-field">
-		{{ form_widget(adminUpdateUserForm.civilityTitle) }}
+		{{ form_widget(adminUserUpdateForm.civilityTitle) }}
 		<p class="error-message error-message_color_red error-message-user-gender-not-checked display-none">
-			Merci de sélectionnner une valeur.
+			Merci de sélectionner une valeur.
 		</p>
-		{{ form_errors(adminUpdateUserForm.civilityTitle) }}
+		{{ form_errors(adminUserUpdateForm.civilityTitle) }}
 	</div>
 	{# firstName #}
 	<div class="form-field">
-		{{ form_label(adminUpdateUserForm, 'Prénom', { 'label_attr': { 'class': 'form-field__label form-field__user-first-name-label display-none' }}) }}
-		{{ form_widget(adminUpdateUserForm.firstName, { 'id': 'user-first-name-input', 'attr': {'class': 'form-field__input form-field__user-first-name-input form-field__input_color_black', 'placeholder': 'Prénom' }}) }}
+		{{ form_label(adminUserUpdateForm, 'Prénom', { 'label_attr': { 'class': 'form-field__label form-field__user-first-name-label display-none' }}) }}
+		{{ form_widget(adminUserUpdateForm.firstName, { 'id': 'user-first-name-input', 'attr': {'class': 'form-field__input form-field__user-first-name-input form-field__input_color_black', 'placeholder': 'Prénom' }}) }}
 		<p class="error-message error-message_color_red error-message-user-first-name-empty display-none">
 			Merci de saisir un prénom.
 		</p>
-		{{ form_errors(adminUpdateUserForm.firstName) }}
+		{{ form_errors(adminUserUpdateForm.firstName) }}
 	</div>
 	{# lastName #}
 	<div class="form-field">
-		{{ form_label(adminUpdateUserForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__user-last-name-label display-none' }}) }}
-		{{ form_widget(adminUpdateUserForm.lastName, { 'id': 'user-last-name-input', 'attr': { 'class': 'form-field__input form-field__user-last-name-input form-field__input_color_black', 'placeholder': 'Nom' }}) }}
+		{{ form_label(adminUserUpdateForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__user-last-name-label display-none' }}) }}
+		{{ form_widget(adminUserUpdateForm.lastName, { 'id': 'user-last-name-input', 'attr': { 'class': 'form-field__input form-field__user-last-name-input form-field__input_color_black', 'placeholder': 'Nom' }}) }}
 		<p class="error-message error-message_color_red error-message-user-last-name-empty display-none">
 			Merci de saisir un nom.
 		</p>
-		{{ form_errors(adminUpdateUserForm.lastName) }}
+		{{ form_errors(adminUserUpdateForm.lastName) }}
 	</div>
 	{# email #}
 	<div class="form-field">
-		{{ form_label(adminUpdateUserForm, 'E-mail', { 'label_attr': { 'class': 'form-field__label form-field__user-e-mail-label display-none' }}) }}
-		{{ form_widget(adminUpdateUserForm.email, { 'id': 'user-e-mail-input', 'attr': { 'class': 'form-field__input form-field__user-e-mail-input form-field__input_color_black', 'placeholder': 'E-mail' }}) }}
+		{{ form_label(adminUserUpdateForm, 'E-mail', { 'label_attr': { 'class': 'form-field__label form-field__user-e-mail-label display-none' }}) }}
+		{{ form_widget(adminUserUpdateForm.email, { 'id': 'user-e-mail-input', 'attr': { 'class': 'form-field__input form-field__user-e-mail-input form-field__input_color_black', 'placeholder': 'E-mail' }}) }}
 		<p class="error-message error-message_color_red error-message-user-e-mail display-none">
 			Merci de saisir un e-mail.
 		</p>
-		{{ form_errors(adminUpdateUserForm.email) }}
+		{{ form_errors(adminUserUpdateForm.email) }}
 	</div>
 	{# password #}
 	<div class="form-field">
-		{{ form_label(adminUpdateUserForm, 'Mot de passe', { 'label_attr': { 'class': 'form-field__label form-field__user-password-label display-none' }}) }}
-		{{ form_widget(adminUpdateUserForm.password, { 'id': 'user-password-input', 'attr': {'class': 'form-field__input form-field__user-password-input form-field__input_color_black', 'placeholder': 'Mot de passe' }}) }}
+		{{ form_label(adminUserUpdateForm, 'Mot de passe', { 'label_attr': { 'class': 'form-field__label form-field__user-password-label display-none' }}) }}
+		{{ form_widget(adminUserUpdateForm.password, { 'id': 'user-password-input', 'attr': {'class': 'form-field__input form-field__user-password-input form-field__input_color_black', 'placeholder': 'Mot de passe' }}) }}
 		<p class="error-message error-message_color_red error-message-user-password-empty display-none">
 			Merci de saisir un mot de passe.
 		</p>
@@ -91,23 +91,23 @@
 		<p class="error-message error-message_color_red error-message-user-password-special-character display-none">
 			Le mot de passe doit contenir au moins un caractére spécial.
 		</p>
-		{{ form_errors(adminUpdateUserForm.password) }}
+		{{ form_errors(adminUserUpdateForm.password) }}
 	</div>
 	{# roles #}
 	<div class="form-field">
-		{{ form_label(adminUpdateUserForm, 'Merci de selectionner le ou les potentiels rôles de l\'utilisateur:', { 'label_attr': { 'class': '' }}) }}
-		     {{ form_widget(adminUpdateUserForm.roles) }}
+		{{ form_label(adminUserUpdateForm, 'Merci de selectionner le ou les potentiels rôles de l\'utilisateur:', { 'label_attr': { 'class': 'form-field__label form-field__user-roles-label' }}) }}
+		     {{ form_widget(adminUserUpdateForm.roles) }}
 			<p class="error-message error-message_color_red error-message-user-roles-not-checked display-none">
-				Merci de sélectionnner une valeur.
+				Merci de sélectionner une valeur.
 			</p>
-		    {{ form_errors(adminUpdateUserForm.roles) }}
-    	</div>
-		{# Submit adminUpdateUserForm button #}
+		    {{ form_errors(adminUserUpdateForm.roles) }}
+    </div>
+		{# Submit adminUserUpdateForm button #}
         <button type="submit" class="page__button page__update-button page__submit-button page__button_background-color_orange page__button_color_white" id="admin-user-update-button">
 	        Mettre à jour
         </button>
-        {{ form_end(adminUpdateUserForm) }}
-        {# END: adminUpdateUserForm #}
+        {{ form_end(adminUserUpdateForm) }}
+        {# END: adminUserUpdateForm #}
 	</section>
 {% endblock %}
 {# END: admin_user_update #}
