--- a/templates/category/list.html.twig
+++ b/templates/category/list.html.twig
@@ -9,22 +9,22 @@
 {% block body %}
 	<section class="page">
 		<h2>Nos Catégories</h2>
-		{# START: searchCategoryForm #}
-		{{ form_start(searchCategoryForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'category-search-form' }}
+		{# START: categorySearchForm #}
+		{{ form_start(categorySearchForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'category-search-form' }}
 		) }}
 		<div class="form-field">
-			{{ form_label(searchCategoryForm, 'Rechercher par nom', { 'label_attr': { 'class': 'form-field__label form-field__category-name-label display-none' }}) }}
-			{{ form_widget(searchCategoryForm.name, { 'id': 'category-name-input', 'attr': {'class': 'form-field__input form-field__category-name-input form-field__input_color_black', 'placeholder': '🔍 Rechercher par nom' }}) }}
+			{{ form_label(categorySearchForm, 'Rechercher par nom', { 'label_attr': { 'class': 'form-field__label form-field__category-name-label display-none' }}) }}
+			{{ form_widget(categorySearchForm.name, { 'id': 'category-name-input', 'attr': {'class': 'form-field__input form-field__category-name-input form-field__input_color_black', 'placeholder': '🔍 Rechercher par nom' }}) }}
 			<p class="error-message error-message_color_red error-message-category-name-empty display-none">
 				Merci de saisir un nom.
 			</p>
-			{{ form_errors(searchCategoryForm.name) }}
+			{{ form_errors(categorySearchForm.name) }}
 		</div>
 		<button type="submit" class="page__button page__submit-button page__search-button page__button_background-color_blue page__button_color_white" id="category-search-button">
 			Rechercher
 		</button>
-		{{ form_end(searchCategoryForm) }}
-		{# END: searchCategoryForm #}
+		{{ form_end(categorySearchForm) }}
+		{# END: categorySearchForm #}
 		<div class="neptune">
 			{% for category in categories %}
 				<div class="square square_border-color_blue">
