--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -9,22 +9,22 @@
 {% block body %}
 	<section class="page">
 		<h2>Nos Produits</h2>
-		{# START: searchProductForm #}
-		{{ form_start(searchProductForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'search-product-form' }}
+		{# START: productSearchForm #}
+		{{ form_start(productSearchForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'search-product-form' }}
 		) }}
 		<div class="form-field">
-			{{ form_label(searchProductForm, 'Rechercher par nom', { 'label_attr': { 'class': 'form-field__label form-field__product-name-label display-none' }}) }}
-			{{ form_widget(searchProductForm.name, { 'id': 'product-name-input', 'attr': {'class': 'form-field__input  form-field__product-name-input form-field__input_color_black', 'placeholder': '🔍 Rechercher par nom' }}) }}
+			{{ form_label(productSearchForm, 'Rechercher par nom', { 'label_attr': { 'class': 'form-field__label form-field__product-name-label display-none' }}) }}
+			{{ form_widget(productSearchForm.name, { 'id': 'product-name-input', 'attr': {'class': 'form-field__input  form-field__product-name-input form-field__input_color_black', 'placeholder': '🔍 Rechercher par nom' }}) }}
 			<p class="error-message error-message_color_red error-message-product-name-empty display-none">
 				Merci de saisir un nom.
 			</p>
-			{{ form_errors(searchProductForm.name) }}
+			{{ form_errors(productSearchForm.name) }}
 		</div>
 		<button type="submit" class="page__button page__submit-button page__search-button page__button_background-color_blue page__button_color_white " id="product-search-button">
 			Rechercher
 		</button>
-		{{ form_end(searchProductForm) }}
-		{# END: searchProductForm #}
+		{{ form_end(productSearchForm) }}
+		{# END: productSearchForm #}
 		<div class="neptune">
 			{% for product in products %}
 				<div class="venus">
