--- a/templates/address/update.html.twig
+++ b/templates/address/update.html.twig
@@ -12,7 +12,7 @@
 		{{ form_start(userUpdateAddressForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'address-update-form' }}) }}
 		{# firstName #}
 		<div class="form-field">
-			{{ form_label(userUpdateAddressForm, 'Prénom', { 'label_attr': { 'class': 'form-field__label form-field__address-first-name-label display-none' }}) }}
+			{{ form_label(userUpdateAddressForm, 'Prénom:', { 'label_attr': { 'class': 'form-field__label form-field__address-first-name-label display-none' }}) }}
 			{{ form_widget(userUpdateAddressForm.firstName, { 'id': 'address-first-name-input', 'attr': {'class': 'form-field__input form-field__user-first-name-input form-field__input_color_black', 'placeholder': 'Prénom' }}) }}
 			<p class="error-message error-message_color_red error-message-user-first-name-empty display-none">
 				Merci de saisir un prénom.
@@ -21,7 +21,7 @@
 		</div>
 		{# lastName #}
 		<div class="form-field">
-			{{ form_label(userUpdateAddressForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__address-last-name-label display-none' }}) }}
+			{{ form_label(userUpdateAddressForm, 'Nom:', { 'label_attr': { 'class': 'form-field__label form-field__address-last-name-label display-none' }}) }}
 			{{ form_widget(userUpdateAddressForm.lastName, { 'id': 'address-last-name-input', 'attr': { 'class': 'form-field__input form-field__user-last-name-input form-field__input_color_black', 'placeholder': 'Nom' }}) }}
 			<p class="error-message error-message_color_red error-message-user-last-name-empty display-none">
 				Merci de saisir un nom.
@@ -30,7 +30,7 @@
 		</div>
 		{# streetNumber #}
 		<div class="form-field">
-			{{ form_label(userUpdateAddressForm, 'Numéro de rue', { 'label_attr': { 'class': 'form-field__label form-field__address-street-number-label display-none' }}) }}
+			{{ form_label(userUpdateAddressForm, 'Numéro de rue:', { 'label_attr': { 'class': 'form-field__label form-field__address-street-number-label display-none' }}) }}
 			{{ form_widget(userUpdateAddressForm.streetNumber, { 'id': 'address-street-number-input', 'attr': { 'class': 'form-field__input form-field__address-street-number-input form-field__input_color_black', 'placeholder': 'Numéro de rue' }}) }}
 			<p class="error-message error-message_color_red error-message-adress-street-number display-none">
 				Merci de saisir un numéro de rue.
@@ -39,7 +39,7 @@
 		</div>
 		{# streetName #}
 		<div class="form-field">
-			{{ form_label(userUpdateAddressForm, 'Nom de rue', { 'label_attr': { 'class': 'form-field__label form-field__address-street-name-label display-none' }}) }}
+			{{ form_label(userUpdateAddressForm, 'Nom de rue:', { 'label_attr': { 'class': 'form-field__label form-field__address-street-name-label display-none' }}) }}
 			{{ form_widget(userUpdateAddressForm.streetName, { 'id': 'address-street-name-input', 'attr': { 'class': 'form-field__input form-field__address-street-name-input form-field__input_color_black', 'placeholder': 'Nom de rue' }}) }}
 			<p class="error-message error-message_color_red error-message-address-street-name-empty display-none">
 				Merci de saisir un nom de rue.
@@ -48,7 +48,7 @@
 		</div>
 		{# zipCode #}
 		<div class="form-field">
-			{{ form_label(userUpdateAddressForm, 'Code postal', { 'label_attr': { 'class': 'form-field__label form-field__address-zip-code-label display-none' }}) }}
+			{{ form_label(userUpdateAddressForm, 'Code postal:', { 'label_attr': { 'class': 'form-field__label form-field__address-zip-code-label display-none' }}) }}
 			{{ form_widget(userUpdateAddressForm.zipCode, { 'id': 'address-zip-code-input', 'attr': { 'class': 'form-field__input form-field__address-zip-code-input form-field__input_color_black', 'placeholder': 'Code postal' }}) }}
 			<p class="error-message error-message_color_red error-message-address-zip-code display-none">
 				Merci de saisir un code postal.
@@ -57,7 +57,7 @@
 		</div>
 		{# city #}
 		<div class="form-field">
-			{{ form_label(userUpdateAddressForm, 'Ville', { 'label_attr': { 'class': 'form-field__label form-field__address-city-label display-none' }}) }}
+			{{ form_label(userUpdateAddressForm, 'Ville:', { 'label_attr': { 'class': 'form-field__label form-field__address-city-label display-none' }}) }}
 			{{ form_widget(userUpdateAddressForm.city, { 'id': 'address-city-input', 'attr': { 'class': 'form-field__input form-field__address-city-input form-field__input_color_black', 'placeholder': 'Ville' }}) }}
 			<p class="error-message error-message_color_red error-message-address-city-empty display-none">
 				Merci de saisir un nom de ville.
@@ -66,7 +66,7 @@
 		</div>
 		{# country #}
 		<div class="form-field">
-			{{ form_label(userUpdateAddressForm, 'Pays', { 'label_attr': { 'class': 'form-field__label form-field__address-country-label display-none' }}) }}
+			{{ form_label(userUpdateAddressForm, 'Pays:', { 'label_attr': { 'class': 'form-field__label form-field__address-country-label display-none' }}) }}
 			{{ form_widget(userUpdateAddressForm.country, { 'id': 'address-country-input', 'attr': { 'class': 'form-field__input form-field__address-country-input form-field__input_color_black', 'placeholder': 'Pays' }}) }}
 			<p class="error-message error-message_color_red error-message-address-country-empty display-none">
 				Merci de saisir un nom de pays.
@@ -75,7 +75,7 @@
 		</div>
 		{# phoneNumber #}
 		<div class="form-field">
-			{{ form_label(userUpdateAddressForm, 'Numéro de téléphone mobile', { 'label_attr': { 'class': 'form-field__label form-field__address-phone-number-label display-none' }}) }}
+			{{ form_label(userUpdateAddressForm, 'Numéro de téléphone mobile:', { 'label_attr': { 'class': 'form-field__label form-field__address-phone-number-label display-none' }}) }}
 			{{ form_widget(userUpdateAddressForm.phoneNumber, { 'id': 'address-phone-number-input', 'attr': { 'class': 'form-field__input form-field__phone-number-input form-field__input_color_black', 'placeholder': 'Numéro de téléphone mobile' }}) }}
 			<p class="error-message error-message_color_red error-message-phone-number display-none">
 				Merci de saisir un numéro de téléphone mobile.
