--- a/templates/admin/address/create.html.twig
+++ b/templates/admin/address/create.html.twig
@@ -18,7 +18,7 @@
 		{{ form_start(adminAddressCreateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-address-create-form' }}) }}
 		{# firstName #}
 		<div class="form-field">
-			{{ form_label(adminAddressCreateForm, 'Prénom', { 'label_attr': { 'class': 'form-field__label form-field__address-first-name-label display-none' }}) }}
+			{{ form_label(adminAddressCreateForm, 'Prénom:', { 'label_attr': { 'class': 'form-field__label form-field__address-first-name-label display-none' }}) }}
 			{{ form_widget(adminAddressCreateForm.firstName, { 'id': 'address-first-name-input', 'attr': {'class': 'form-field__input form-field__user-first-name-input form-field__input_color_black', 'placeholder': 'Prénom' }}) }}
 			<p class="error-message error-message_color_red error-message-user-first-name-empty display-none">
 				Merci de saisir un prénom.
@@ -27,7 +27,7 @@
 		</div>
 		{# lastName #}
 		<div class="form-field">
-			{{ form_label(adminAddressCreateForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__address-last-name-label display-none' }}) }}
+			{{ form_label(adminAddressCreateForm, 'Nom:', { 'label_attr': { 'class': 'form-field__label form-field__address-last-name-label display-none' }}) }}
 			{{ form_widget(adminAddressCreateForm.lastName, { 'id': 'address-last-name-input', 'attr': { 'class': 'form-field__input form-field__user-last-name-input form-field__input_color_black', 'placeholder': 'Nom' }}) }}
 			<p class="error-message error-message_color_red error-message-user-last-name-empty display-none">
 				Merci de saisir un nom.
@@ -36,7 +36,7 @@
 		</div>
 		{# streetNumber #}
 		<div class="form-field">
-			{{ form_label(adminAddressCreateForm, 'Numéro de rue', { 'label_attr': { 'class': 'form-field__label form-field__address-street-number-label display-none' }}) }}
+			{{ form_label(adminAddressCreateForm, 'Numéro de rue:', { 'label_attr': { 'class': 'form-field__label form-field__address-street-number-label display-none' }}) }}
 			{{ form_widget(adminAddressCreateForm.streetNumber, { 'id': 'address-street-number-input', 'attr': { 'class': 'form-field__input form-field__address-street-number-input form-field__input_color_black', 'placeholder': 'Numéro de rue' }}) }}
 			<p class="error-message error-message_color_red error-message-adress-street-number display-none">
 				Merci de saisir un numéro de rue.
@@ -45,7 +45,7 @@
 		</div>
 		{# streetName #}
 		<div class="form-field">
-			{{ form_label(adminAddressCreateForm, 'Nom de rue', { 'label_attr': { 'class': 'form-field__label form-field__address-street-name-label display-none' }}) }}
+			{{ form_label(adminAddressCreateForm, 'Nom de rue:', { 'label_attr': { 'class': 'form-field__label form-field__address-street-name-label display-none' }}) }}
 			{{ form_widget(adminAddressCreateForm.streetName, { 'id': 'address-street-name-input', 'attr': { 'class': 'form-field__input form-field__address-street-name-input form-field__input_color_black', 'placeholder': 'Nom de rue' }}) }}
 			<p class="error-message error-message_color_red error-message-address-street-name-empty display-none">
 				Merci de saisir un nom de rue.
@@ -54,7 +54,7 @@
 		</div>
 		{# zipCode #}
 		<div class="form-field">
-			{{ form_label(adminAddressCreateForm, 'Code postal', { 'label_attr': { 'class': 'form-field__label form-field__address-zip-code-label display-none' }}) }}
+			{{ form_label(adminAddressCreateForm, 'Code postal:', { 'label_attr': { 'class': 'form-field__label form-field__address-zip-code-label display-none' }}) }}
 			{{ form_widget(adminAddressCreateForm.zipCode, { 'id': 'address-zip-code-input', 'attr': { 'class': 'form-field__input form-field__address-zip-code-input form-field__input_color_black', 'placeholder': 'Code postal' }}) }}
 			<p class="error-message error-message_color_red error-message-address-zip-code display-none">
 				Merci de saisir un code postal.
@@ -63,7 +63,7 @@
 		</div>
 		{# city #}
 		<div class="form-field">
-			{{ form_label(adminAddressCreateForm, 'Ville', { 'label_attr': { 'class': 'form-field__label form-field__address-city-label display-none' }}) }}
+			{{ form_label(adminAddressCreateForm, 'Ville:', { 'label_attr': { 'class': 'form-field__label form-field__address-city-label display-none' }}) }}
 			{{ form_widget(adminAddressCreateForm.city, { 'id': 'address-city-input', 'attr': { 'class': 'form-field__input form-field__address-city-input form-field__input_color_black', 'placeholder': 'Ville' }}) }}
 			<p class="error-message error-message_color_red error-message-address-city-empty display-none">
 				Merci de saisir un nom de ville.
@@ -72,7 +72,7 @@
 		</div>
 		{# country #}
 		<div class="form-field">
-			{{ form_label(adminAddressCreateForm, 'Pays', { 'label_attr': { 'class': 'form-field__label form-field__address-country-label display-none' }}) }}
+			{{ form_label(adminAddressCreateForm, 'Pays:', { 'label_attr': { 'class': 'form-field__label form-field__address-country-label display-none' }}) }}
 			{{ form_widget(adminAddressCreateForm.country, { 'id': 'address-country-input', 'attr': { 'class': 'form-field__input form-field__address-country-input form-field__input_color_black', 'placeholder': 'Pays' }}) }}
 			<p class="error-message error-message_color_red error-message-address-country-empty display-none">
 				Merci de saisir un nom de pays.
@@ -81,7 +81,7 @@
 		</div>
 		{# phoneNumber #}
 		<div class="form-field">
-			{{ form_label(adminAddressCreateForm, 'Numéro de téléphone mobile', { 'label_attr': { 'class': 'form-field__label form-field__address-phone-number-label display-none' }}) }}
+			{{ form_label(adminAddressCreateForm, 'Numéro de téléphone mobile:', { 'label_attr': { 'class': 'form-field__label form-field__address-phone-number-label display-none' }}) }}
 			{{ form_widget(adminAddressCreateForm.phoneNumber, { 'id': 'address-phone-number-input', 'attr': { 'class': 'form-field__input form-field__phone-number-input form-field__input_color_black', 'placeholder': 'Numéro de téléphone mobile' }}) }}
 			<p class="error-message error-message_color_red error-message-phone-number display-none">
 				Merci de saisir un numéro de téléphone mobile.
