--- a/templates/admin/address/list.html.twig
+++ b/templates/admin/address/list.html.twig
@@ -15,7 +15,7 @@
 		{{ form_start(addressSearchForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'address-search-form' }}
 		) }}
 		<div class="form-field">
-			{{ form_label(addressSearchForm, 'Ville', { 'label_attr': { 'class': 'form-field__label form-field__address-city-label display-none' }}) }}
+			{{ form_label(addressSearchForm, 'Ville:', { 'label_attr': { 'class': 'form-field__label form-field__address-city-label display-none' }}) }}
 
 			{{ form_widget(addressSearchForm.city, { 'id': 'address-city-input', 'attr': {'class': 'form-field__input form-field__address-city-input form-field__input_color_black', 'placeholder': '🔍 Rechercher par ville' }}) }}
 			<p class="error-message error-message_color_red error-message-address-city-empty display-none">
