--- a/templates/admin/category/create.html.twig
+++ b/templates/admin/category/create.html.twig
@@ -13,7 +13,7 @@
 		{{ form_start(adminCategoryCreateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-category-create-form' }}) }}
 		{# name #}
 		<div class="form-field">
-			{{ form_label(adminCategoryCreateForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__category-name-label display-none' }}) }}
+			{{ form_label(adminCategoryCreateForm, 'Nom:', { 'label_attr': { 'class': 'form-field__label form-field__category-name-label display-none' }}) }}
 			{{ form_widget(adminCategoryCreateForm.name, { 'id': 'category-name-input', 'attr': {'class': 'form-field__input form-field__category-name-input form-field__input_color_black', 'placeholder': 'Nom' }}) }}
 			<p class="error-message error-message_color_red error-message-category-name-empty display-none">
 				Merci de saisir un nom.
