--- a/templates/admin/category/list.html.twig
+++ b/templates/admin/category/list.html.twig
@@ -13,7 +13,7 @@
 		{{ form_start(categorySearchForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'category-search-form' }}
 		) }}
 		<div class="form-field">
-			{{ form_label(categorySearchForm, 'Rechercher par nom', { 'label_attr': { 'class': 'form-field__label form-field__category-name-label display-none' }}) }}
+			{{ form_label(categorySearchForm, 'Rechercher par nom:', { 'label_attr': { 'class': 'form-field__label form-field__category-name-label display-none' }}) }}
 
 			{{ form_widget(categorySearchForm.name, { 'id': 'category-name-input', 'attr': {'class': 'form-field__input form-field__category-name-input form-field__input_color_black', 'placeholder': '🔍 Rechercher par nom' }}) }}
 			<p class="error-message error-message_color_red error-message-category-name-empty display-none">
