--- a/templates/admin/category/update.html.twig
+++ b/templates/admin/category/update.html.twig
@@ -16,8 +16,7 @@
 		{{ form_start(adminCategoryUpdateForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'admin-category-update-form' }}) }}
 		{# name #}
 		<div class="form-field">
-			{{ form_label(adminCategoryUpdateForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__category-name-label display-none' }}) }}
-
+			{{ form_label(adminCategoryUpdateForm, 'Nom:', { 'label_attr': { 'class': 'form-field__label form-field__category-name-label display-none' }}) }}
 			{{ form_widget(adminCategoryUpdateForm.name, { 'id': 'category-name-input', 'attr': {'class': 'form-field__input form-field__category-name-input form-field__input_color_black', 'placeholder': 'Nom' }}) }}
 			<p class="error-message error-message_color_red error-message-category-name-empty display-none">
 				Merci de saisir un nom.
