--- a/templates/admin/delivery-mode/list.html.twig
+++ b/templates/admin/delivery-mode/list.html.twig
@@ -14,7 +14,7 @@
 		) }}
 		{# Name #}
 		<div class="form-field">
-			{{ form_label(adminDeliveryModeSearchForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__delivery-mode-name-label display-none' }}) }}
+			{{ form_label(adminDeliveryModeSearchForm, 'Nom:', { 'label_attr': { 'class': 'form-field__label form-field__delivery-mode-name-label display-none' }}) }}
 			{{ form_widget(adminDeliveryModeSearchForm.name, { 'id': 'delivery-mode-name-input', 'attr': {'class': 'form-field__input form-field__delivery-mode-name-input form-field__input_color_black', 'placeholder': '🔍 Rechercher par nom' }}
 			) }}
 			<p class="error-message error-message_color_red error-message-delivery-mode-name-empty display-none">
