--- a/templates/admin/delivery-mode/update.html.twig
+++ b/templates/admin/delivery-mode/update.html.twig
@@ -20,19 +20,19 @@
 		</div>
 		{# upload #}
 		<div class="form-field">
-			{{ form_label(adminDeliveryModeUpdateForm, 'Photo', { 'label_attr': { 'class': 'form-field__label form-field__delivery-mode-picture-label display-none' }}) }}
+			{{ form_label(adminDeliveryModeUpdateForm, 'Photo:', { 'label_attr': { 'class': 'form-field__label form-field__delivery-mode-picture-label display-none' }}) }}
 			{{ form_widget(adminDeliveryModeUpdateForm.upload, { 'id': 'delivery-mode-picture-input', 'attr': { 'class': 'form-field__input form-field__delivery-mode-picture-input form-field__input_color_black' }}) }}
 			<p class="error-message error-message_color_red error-message-delivery-mode-picture-mime-type display-none">
-				Merci de télécharger un fichier au format PDF, PNG, JPEG ou SVG.
+				Merci de téléverser un fichier au format PDF, PNG, JPEG ou SVG.
 			</p>
 			<p class="error-message error-message_color_red error-message-delivery-mode-picture-size display-none">
-				Merci de télécharger un fichier de maximum 300 000 bytes.
+				Merci de téléverser un fichier de maximum 300 000 bytes.
 			</p>
 			{{ form_errors(adminDeliveryModeUpdateForm.upload) }}
 		</div>
 		{# name #}
 		<div class="form-field">
-			{{ form_label(adminDeliveryModeUpdateForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__delivery-mode-name-label display-none' }}) }}
+			{{ form_label(adminDeliveryModeUpdateForm, 'Nom:', { 'label_attr': { 'class': 'form-field__label form-field__delivery-mode-name-label display-none' }}) }}
 			{{ form_widget(adminDeliveryModeUpdateForm.name, { 'id': 'delivery-mode-name-input', 'attr': {'class': 'form-field__input form-field__delivery-mode-name-input form-field__input_color_black', 'placeholder': 'Nom' }}) }}
 			<p class="error-message error-message_color_red error-message-delivery-mode-name-empty display-none">
 				Merci de saisir un nom.
@@ -41,7 +41,7 @@
 		</div>
 		{# price #}
 		<div class="form-field">
-			{{ form_label(adminDeliveryModeUpdateForm, 'Prix', { 'label_attr': { 'class': 'form-field__label form-field__delivery-mode-price-label display-none' }}) }}
+			{{ form_label(adminDeliveryModeUpdateForm, 'Prix:', { 'label_attr': { 'class': 'form-field__label form-field__delivery-mode-price-label display-none' }}) }}
 			{{ form_widget(adminDeliveryModeUpdateForm.price, { 'id': 'delivery-mode-price-input', 'attr': {'class': 'form-field__input form-field__delivery-mode-price-input form-field__input_color_black', 'placeholder': 'Prix en euros' }}) }}
 			<p class="error-message error-message_color_red error-message-delivery-mode-price display-none">
 				Merci de saisir un prix en euros.
@@ -50,14 +50,14 @@
 		</div>
 		{# minCartAmountForFreeDelivery #}
 		<div class="form-field">
-			{{ form_label(adminDeliveryModeUpdateForm, 'Montant minimum d\'achat pour gratuité', { 'label_attr': { 'class': 'form-field__label form-field__delivery-mode-min-cart-amount-for-free-delivery-label display-none' }}) }}
+			{{ form_label(adminDeliveryModeUpdateForm, 'Montant minimum d\'achat pour gratuité:', { 'label_attr': { 'class': 'form-field__label form-field__delivery-mode-min-cart-amount-for-free-delivery-label display-none' }}) }}
 				{{ form_widget(adminDeliveryModeUpdateForm.minCartAmountForFreeDelivery, { 'id': 'delivery-mode-min-cart-amount-for-free-delivery-input', 'attr': {'class': 'form-field__input form-field__delivery-mode-min-cart-amount-for-free-delivery-input form-field__input_color_black', 'placeholder': 'Montant minimum d\'achat pour gratuité' }}) }}
 			<p class="error-message error-message_color_red error-message-delivery-mode-min-cart-amount-for-free-delivery display-none">Merci de saisir un prix en euros.</p>
 			{{ form_errors(adminDeliveryModeUpdateForm.minCartAmountForFreeDelivery) }}
 		</div>
 		{# description #}
 		<div class="form-field">
-			{{ form_label(adminDeliveryModeUpdateForm, 'Description', { 'label_attr': { 'class': 'form-field__label form-field__delivery-mode-description-label display-none' }}) }}
+			{{ form_label(adminDeliveryModeUpdateForm, 'Description:', { 'label_attr': { 'class': 'form-field__label form-field__delivery-mode-description-label display-none' }}) }}
 			{{ form_widget(adminDeliveryModeUpdateForm.description, { 'id': 'delivery-mode-description-input', 'attr': {'class': 'form-field__input form-field__delivery-mode-description-input form-field__input_color_black', 'placeholder': 'Description' }}) }}
 			<p class="error-message error-message_color_red error-message-delivery-mode-description-empty display-none">
 				Merci de saisir une description.
