--- a/templates/admin/product/update.html.twig
+++ b/templates/admin/product/update.html.twig
@@ -20,18 +20,18 @@
 		</div>
 		{# upload #}
 		<div class="form-field">
-			{{ form_label(adminProductUpdateForm, 'Photo', { 'label_attr': { 'class': 'form-field__label form-field__product-picture-label display-none' }}) }}
+			{{ form_label(adminProductUpdateForm, 'Photo:', { 'label_attr': { 'class': 'form-field__label form-field__product-picture-label display-none' }}) }}
 			{{ form_widget(adminProductUpdateForm.upload, { 'id': 'product-picture-input', 'attr': { 'class': 'form-field__input form-field__product-picture-input form-field__input_color_black' }}) }}
 			<p class="error-message error-message_color_red error-message-product-picture-mime-type display-none">
-				Merci de télécharger un fichier au format PDF, PNG, JPEG ou SVG.
+				Merci de téléverser un fichier au format PDF, PNG, JPEG ou SVG.
 			</p>
 			<p class="error-message error-message_color_red error-message-product-picture-size display-none">
-				Merci de télécharger un fichier de maximum 300 000 bytes.</p>
+				Merci de téléverser un fichier de maximum 300 000 bytes.</p>
 			{{ form_errors(adminProductUpdateForm.upload) }}
 		</div>
 		{# name #}
 		<div class="form-field">
-			{{ form_label(adminProductUpdateForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__product-name-label display-none' }}) }}
+			{{ form_label(adminProductUpdateForm, 'Nom:', { 'label_attr': { 'class': 'form-field__label form-field__product-name-label display-none' }}) }}
 			{{ form_widget(adminProductUpdateForm.name, { 'id': 'product-name-input', 'attr': {'class': 'form-field__input form-field__product-name-input form-field__input_color_black', 'placeholder': 'Nom' }}) }}
 			<p class="error-message error-message_color_red error-message-product-name-empty display-none">
 				Merci de saisir un nom.
@@ -40,7 +40,7 @@
 		</div>
 		{# price #}
 		<div class="form-field">
-			{{ form_label(adminProductUpdateForm, 'Prix', { 'label_attr': { 'class': 'form-field__label form-field__product-price-label display-none' }}) }}
+			{{ form_label(adminProductUpdateForm, 'Prix:', { 'label_attr': { 'class': 'form-field__label form-field__product-price-label display-none' }}) }}
 			{{ form_widget(adminProductUpdateForm.price, { 'id': 'product-price-input', 'attr': {'class': 'form-field__input form-field__product-price-input form-field__input_color_black', 'placeholder': 'Prix en euros' }}) }}
 			<p class="error-message error-message_color_red error-message-product-price display-none">
 				Merci de saisir un prix.
@@ -49,7 +49,7 @@
 		</div>
 		{# description #}
 		<div class="form-field">
-			{{ form_label(adminProductUpdateForm, 'Description', { 'label_attr': { 'class': 'form-field__label form-field__product-description-label display-none' }}) }}
+			{{ form_label(adminProductUpdateForm, 'Description:', { 'label_attr': { 'class': 'form-field__label form-field__product-description-label display-none' }}) }}
 			{{ form_widget(adminProductUpdateForm.description, { 'id': 'product-description-input', 'attr': {'class': 'form-field__input form-field__product-description-input form-field__input_color_black', 'placeholder': 'Description' }}) }}
 			<p class="error-message error-message_color_red error-message-product-description-empty display-none">
 				Merci de saisir une description.
@@ -67,7 +67,7 @@
 		</div>
 		{# category #}
 		<div class="form-field">
-			{{ form_label(adminProductUpdateForm, 'Categorie :', { 'label_attr': { 'class': 'form-field__label' }}) }}
+			{{ form_label(adminProductUpdateForm, 'Categorie:', { 'label_attr': { 'class': 'form-field__label' }}) }}
 			{{ form_widget(adminProductUpdateForm.category) }}
 			<p class="error-message error-message_color_red error-message-category-product-not-checked display-none">
 				Merci de sélectionner une catégorie.
