--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,7 +20,7 @@
 			{% endif %}
 			{# email #}
 			<div class="form-field">
-				<label class="form-field__label form-field__user-e-mail-label display-none" for="inputEmail">E-mail</label>
+				<label class="form-field__label form-field__user-e-mail-label display-none" for="inputEmail">E-mail:</label>
 				<input class="form-field__input form-field__user-e-mail-input form-field__input_color_black" id="inputEmail" type="email" value="{{ last_username }}" name="email" placeholder="E-mail" autocomplete="email" required autofocus>
 				<p class="error-message error-message_color_red error-message-user-e-mail display-none">
 					Merci de saisir un e-mail.
@@ -28,7 +28,7 @@
 			</div>
 			{# password #}
 			<div class="form-field">
-				<label class="form-field__label form-field__user-password-label display-none" for="inputPassword">Password</label>
+				<label class="form-field__label form-field__user-password-label display-none" for="inputPassword">Password:</label>
 				<input class="form-field__input form-field__user-password-input form-field__input_color_black" id="inputPassword" type="password" name="password" placeholder="Mot de passe" autocomplete="current-password" required>
 				<p class="error-message error-message_color_red error-message-user-password-empty display-none">
 					Merci de saisir un mot de passe.
@@ -49,12 +49,12 @@
 					Le mot de passe doit contenir au moins un caractére spécial.
 				</p>
 			</div>
-			{# Remember me option #}
+			{# Remember me feature #}
 			<div class="form-field">
 				<input type="checkbox" name="_remember_me" checked/>
-				<label>Rester connecter</label>
+				<label class="form-field__remember-me-label">Rester connecter</label>
 			</div>
-			{# csrf token #}
+			{# CSRF token #}
 			<input
 			type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 			{# loginForm submit button #}
