--- a/templates/sign-up/sign-up.html.twig
+++ b/templates/sign-up/sign-up.html.twig
@@ -24,19 +24,19 @@
 		</div>
 		{# picture #}
 		<div class="form-field">
-			{{ form_label(signUpForm, 'Photo de profil', { 'label_attr': { 'class': 'form-field__label form-field__user-picture-label display-none' }}) }}
+			{{ form_label(signUpForm, 'Photo de profil:', { 'label_attr': { 'class': 'form-field__label form-field__user-picture-label display-none' }}) }}
 			{{ form_widget(signUpForm.picture, { 'id': 'user-picture-input', 'attr': {'class': 'form-field__input form-field__user-picture-input form-field__input_color_black' }}) }}
 			<p class="error-message error-message_color_red error-message-user-picture-mime-type display-none">
-				Merci de télécharger un fichier au format PDF, PNG, JPEG ou SVG.
+				Merci de téléverser un fichier au format PDF, PNG, JPEG ou SVG.
 			</p>
 			<p class="error-message error-message_color_red error-message-user-picture-size display-none">
-				Merci de télécharger un fichier de maximum 300 000 bytes.
+				Merci de téléverser un fichier de maximum 300 000 bytes.
 			</p>
 			{{ form_errors(signUpForm.picture) }}
 		</div>
 		{# firstName #}
 		<div class="form-field">
-			{{ form_label(signUpForm, 'Prénom', { 'label_attr': { 'class': 'form-field__label form-field__user-first-name-label display-none' }}) }}
+			{{ form_label(signUpForm, 'Prénom:', { 'label_attr': { 'class': 'form-field__label form-field__user-first-name-label display-none' }}) }}
 			{{ form_widget(signUpForm.firstName, { 'id': 'user-first-name-input', 'attr': {'class': 'form-field__input form-field__user-first-name-input form-field__input_color_black', 'placeholder': 'Prénom' }}) }}
 
 			<p class="error-message error-message_color_red error-message-user-first-name-empty display-none">
@@ -46,7 +46,7 @@
 		</div>
 		{# lastName #}
 		<div class="form-field">
-			{{ form_label(signUpForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__user-last-name-label display-none' }}) }}
+			{{ form_label(signUpForm, 'Nom:', { 'label_attr': { 'class': 'form-field__label form-field__user-last-name-label display-none' }}) }}
 			{{ form_widget(signUpForm.lastName, { 'id': 'user-last-name-input', 'attr': {'class': 'form-field__input form-field__user-last-name-input form-field__input_color_black', 'placeholder': 'Nom'}}) }}
 			<p class="error-message error-message_color_red error-message-user-last-name-empty display-none">
 				Merci de saisir un nom.
@@ -55,7 +55,7 @@
 		</div>
 		{# email #}
 		<div class="form-field">
-			{{ form_label(signUpForm, 'E-mail', { 'label_attr': { 'class': 'form-field__label form-field__user-e-mail-label display-none' }}) }}
+			{{ form_label(signUpForm, 'E-mail:', { 'label_attr': { 'class': 'form-field__label form-field__user-e-mail-label display-none' }}) }}
 			{{ form_widget(signUpForm.email, { 'id': 'user-e-mail-input', 'attr': {'class': 'form-field__input form-field__user-e-mail-input form-field__input_color_black', 'placeholder': 'E-mail' }}) }}
 			<p class="error-message error-message_color_red error-message-user-e-mail display-none">
 				Merci de saisir un e-mail.
@@ -64,7 +64,7 @@
 		</div>
 		{# plainPassword #}
 		<div class="form-field">
-			{{ form_label(signUpForm, 'Mot de passe', { 'label_attr': { 'class': 'form-field__label form-field__user-password-label display-none' }}) }}
+			{{ form_label(signUpForm, 'Mot de passe:', { 'label_attr': { 'class': 'form-field__label form-field__user-password-label display-none' }}) }}
 			{{ form_widget(signUpForm.plainPassword, { 'id': 'user-password-input', 'attr': {'class': 'form-field__input form-field__user-password-input form-field__input_color_black', 'placeholder': 'Mot de passe' }}) }}
 			<p class="error-message error-message_color_red error-message-user-password-empty display-none">
 				Merci de saisir un mot de passe.
