--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -22,13 +22,13 @@
 		</div>
 		{# upload #}
 		<div class="form-field form-field-upload display-none">
-			{{ form_label(userProfileForm, 'Photo de profil', { 'label_attr': { 'class': 'form-field__label form-field__user-picture-label display-none' }}) }}
+			{{ form_label(userProfileForm, 'Photo de profil:', { 'label_attr': { 'class': 'form-field__label form-field__user-picture-label display-none' }}) }}
 			{{ form_widget(userProfileForm.upload, { 'id': 'update-my-user-picture-input', 'attr': { 'class': 'form-field__input form-field__user-picture-input form-field__input_color_black' }}) }}
 			<p class="error-message error-message_color_red error-message-user-picture-mime-type display-none">
-				Merci de télécharger un fichier au format PDF, PNG, JPEG ou SVG.
+				Merci de téléverser un fichier au format PDF, PNG, JPEG ou SVG.
 			</p>
 			<p class="error-message error-message_color_red error-message-user-picture-size display-none">
-				Merci de télécharger un fichier de maximum 300 000 bytes.
+				Merci de téléverser un fichier de maximum 300 000 bytes.
 			</p>
 			{{ form_errors(userProfileForm.upload) }}
 		</div>
@@ -44,7 +44,7 @@
 		</div>
 		{# firstName #}
 		<div class="form-field">
-			{{ form_label(userProfileForm, 'Prénom', { 'label_attr': { 'class': 'form-field__label form-field__user-first-name-label display-none' }}) }}
+			{{ form_label(userProfileForm, 'Prénom:', { 'label_attr': { 'class': 'form-field__label form-field__user-first-name-label display-none' }}) }}
 			{{ form_widget(userProfileForm.firstName, { 'id': 'update-my-user-first-name-input', 'attr': {'class': 'form-field__input form-field__user-first-name-input form-field__input_color_black', 'placeholder': 'Prénom', 'disabled':'disabled' }}) }}
 			<p class="error-message error-message_color_red error-message-user-first-name-empty display-none">
 				Merci de saisir un prénom.
@@ -53,7 +53,7 @@
 		</div>
 		{# lastName #}
 		<div class="form-field">
-			{{ form_label(userProfileForm, 'Nom', { 'label_attr': { 'class': 'form-field__label form-field__user-last-name-label display-none' }}) }}
+			{{ form_label(userProfileForm, 'Nom:', { 'label_attr': { 'class': 'form-field__label form-field__user-last-name-label display-none' }}) }}
 			{{ form_widget(userProfileForm.lastName, { 'id': 'update-my-user-last-name-input', 'attr': { 'class': 'form-field__input form-field__user-last-name-input form-field__input_color_black', 'placeholder': 'Nom', 'disabled':'disabled' }}) }}
 			<p class="error-message error-message_color_red error-message-user-last-name-empty display-none">
 				Merci de saisir un nom.
@@ -62,7 +62,7 @@
 		</div>
 		{# email #}
 		<div class="form-field">
-			{{ form_label(userProfileForm, 'E-mail', { 'label_attr': { 'class': 'form-field__label form-field__user-e-mail-label display-none' }}) }}
+			{{ form_label(userProfileForm, 'E-mail:', { 'label_attr': { 'class': 'form-field__label form-field__user-e-mail-label display-none' }}) }}
 			{{ form_widget(userProfileForm.email, { 'id': 'update-my-user-e-mail-input', 'attr': { 'class': 'form-field__input form-field__user-e-mail-input form-field__input_color_black', 'placeholder': 'E-mail', 'disabled':'disabled' }}) }}
 			<p class="error-message error-message_color_red error-message-user-e-mail display-none">
 				Merci de saisir un e-mail.
