--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -51,8 +51,8 @@
 			</div>
 			{# Remember me feature #}
 			<div class="form-field">
-				<input type="checkbox" name="_remember_me" checked/>
-				<label class="form-field__remember-me-label">Rester connecter</label>
+				<input type="checkbox" name="_remember_me" id="remember-me-input" checked/>
+				<label class="form-field__remember-me-label" for="remember-me-input">Rester connecter</label>
 			</div>
 			{# CSRF token #}
 			<input
